--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ certifi==2023.5.7
 cffi==1.15.1
 chardet==5.1.0
 charset-normalizer==3.2.0
-matpllotlib
+matplotlib
 click==8.1.5
 cryptography==41.0.2
 decorator==5.1.1
